added the CI pipeline

--- a/.github/workflows/config-ci.yml
+++ b/.github/workflows/config-ci.yml
@@ -12,7 +12,7 @@ jobs:
       - name: setup JAVA
         uses: actions/setup-java@v4
         with:
-          distributions: 'oracle'
+          distribution: 'oracle'
           java-version: 17
 
       - name: build and test
@@ -28,7 +28,7 @@ jobs:
       - name: setup JAVA
         uses: actions/setup-java@v4
         with:
-          distributions: 'oracle'
+          distribution: 'oracle'
           java-version: 17
 
       - name: test
